--- a/telegram_project/images.qrc
+++ b/telegram_project/images.qrc
@@ -3,6 +3,8 @@
         <file>1.test.png</file>
         <file>back.jpg</file>
         <file>next-button.png</file>
+        <file>hide-button-icon.png</file>
+        <file>show-button-icon.png</file>
     </qresource>
     <qresource prefix="/new/prefix2"/>
 </RCC>
