--- a/telegram_project/page_1_start.ui
+++ b/telegram_project/page_1_start.ui
@@ -10,6 +10,12 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="sizeIncrement">
+   <size>
+    <width>900</width>
+    <height>600</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>page_1_start</string>
   </property>
@@ -80,7 +86,7 @@ background-color: rgb(255, 255, 255);</string>
      <x>0</x>
      <y>0</y>
      <width>900</width>
-     <height>25</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
