--- a/telegram/images.qrc
+++ b/telegram/images.qrc
@@ -5,6 +5,10 @@
         <file>hide-button-icon.png</file>
         <file>next-button.png</file>
         <file>show-button-icon.png</file>
+        <file>welcome _page4.png</file>
+        <file>no_back.png</file>
+        <file>page1_back.jpg</file>
+        <file>no back for pag 1.png</file>
     </qresource>
     <qresource prefix="/new/prefix1"/>
 </RCC>
