--- a/telegram/page1_start.ui
+++ b/telegram/page1_start.ui
@@ -6,24 +6,30 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>900</width>
-    <height>600</height>
+    <width>1000</width>
+    <height>700</height>
    </rect>
+  </property>
+  <property name="baseSize">
+   <size>
+    <width>1000</width>
+    <height>700</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>page1_start</string>
   </property>
   <property name="styleSheet">
-   <string notr="true"/>
+   <string notr="true">background-image: url(:/images/page1_back.jpg);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QGroupBox" name="groupBox">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>60</y>
-      <width>601</width>
-      <height>421</height>
+      <x>280</x>
+      <y>130</y>
+      <width>430</width>
+      <height>450</height>
      </rect>
     </property>
     <property name="title">
@@ -32,10 +38,10 @@
     <widget class="QPushButton" name="next_pushButton">
      <property name="geometry">
       <rect>
-       <x>200</x>
-       <y>320</y>
-       <width>221</width>
-       <height>86</height>
+       <x>110</x>
+       <y>340</y>
+       <width>200</width>
+       <height>82</height>
       </rect>
      </property>
      <property name="text">
@@ -45,11 +51,17 @@
     <widget class="QLabel" name="welcome_label">
      <property name="geometry">
       <rect>
-       <x>230</x>
-       <y>240</y>
-       <width>211</width>
-       <height>71</height>
+       <x>40</x>
+       <y>180</y>
+       <width>345</width>
+       <height>141</height>
       </rect>
+     </property>
+     <property name="baseSize">
+      <size>
+       <width>100</width>
+       <height>70</height>
+      </size>
      </property>
      <property name="font">
       <font>
@@ -57,17 +69,26 @@
       </font>
      </property>
      <property name="text">
-      <string>welcome</string>
+      <string/>
      </property>
     </widget>
     <widget class="QLabel" name="logo_label">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>60</y>
-       <width>351</width>
-       <height>144</height>
+       <x>60</x>
+       <y>30</y>
+       <width>300</width>
+       <height>132</height>
       </rect>
+     </property>
+     <property name="baseSize">
+      <size>
+       <width>300</width>
+       <height>132</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-image: url(:/images/1.test.png);</string>
      </property>
      <property name="text">
       <string/>
@@ -80,8 +101,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>900</width>
-     <height>25</height>
+     <width>1000</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
