--- a/telegram/page4_home.ui
+++ b/telegram/page4_home.ui
@@ -6,30 +6,34 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>814</width>
+    <height>510</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>230</y>
-      <width>201</width>
-      <height>81</height>
+      <x>390</x>
+      <y>260</y>
+      <width>241</width>
+      <height>111</height>
      </rect>
     </property>
-    <property name="font">
-     <font>
-      <pointsize>25</pointsize>
-     </font>
+    <property name="baseSize">
+     <size>
+      <width>100</width>
+      <height>70</height>
+     </size>
     </property>
     <property name="text">
-     <string>Welcome</string>
+     <string/>
     </property>
    </widget>
   </widget>
@@ -38,8 +42,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>25</height>
+     <width>814</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
