--- a/telegram server/telegram/images.qrc
+++ b/telegram server/telegram/images.qrc
@@ -9,6 +9,9 @@
         <file>no_back.png</file>
         <file>page1_back.jpg</file>
         <file>no back for pag 1.png</file>
+        <file>Background_page1_plane.jpg</file>
+        <file>Background_page1_planedark.jpg</file>
+        <file>back_moon.jpg</file>
     </qresource>
     <qresource prefix="/new/prefix1"/>
 </RCC>
