--- a/telegram client/telegram/page1_start.ui
+++ b/telegram client/telegram/page1_start.ui
@@ -23,86 +23,24 @@
    <string notr="true">background-image: url(:/images/page1_back.jpg);</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGroupBox" name="groupBox">
+   <widget class="QPushButton" name="next_pushButton">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>80</y>
-      <width>430</width>
-      <height>450</height>
+      <x>310</x>
+      <y>370</y>
+      <width>201</width>
+      <height>53</height>
      </rect>
     </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
+    <property name="baseSize">
+     <size>
+      <width>0</width>
+      <height>0</height>
+     </size>
     </property>
-    <property name="title">
-     <string/>
+    <property name="text">
+     <string>Send Messages</string>
     </property>
-    <widget class="QPushButton" name="next_pushButton">
-     <property name="geometry">
-      <rect>
-       <x>140</x>
-       <y>340</y>
-       <width>155</width>
-       <height>53</height>
-      </rect>
-     </property>
-     <property name="baseSize">
-      <size>
-       <width>0</width>
-       <height>0</height>
-      </size>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QLabel" name="welcome_label">
-     <property name="geometry">
-      <rect>
-       <x>40</x>
-       <y>180</y>
-       <width>345</width>
-       <height>141</height>
-      </rect>
-     </property>
-     <property name="baseSize">
-      <size>
-       <width>100</width>
-       <height>70</height>
-      </size>
-     </property>
-     <property name="font">
-      <font>
-       <pointsize>20</pointsize>
-      </font>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
-    <widget class="QLabel" name="logo_label">
-     <property name="geometry">
-      <rect>
-       <x>60</x>
-       <y>30</y>
-       <width>300</width>
-       <height>132</height>
-      </rect>
-     </property>
-     <property name="baseSize">
-      <size>
-       <width>300</width>
-       <height>132</height>
-      </size>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-image: url(:/images/1.test.png);</string>
-     </property>
-     <property name="text">
-      <string/>
-     </property>
-    </widget>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
