--- a/telegram client/telegram/page4_home.ui
+++ b/telegram client/telegram/page4_home.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>794</width>
-    <height>594</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,14 +20,14 @@
    <widget class="QGroupBox" name="groupBox_chatbox">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>370</x>
       <y>0</y>
       <width>421</width>
       <height>541</height>
      </rect>
     </property>
     <property name="title">
-     <string/>
+     <string>GroupBox</string>
     </property>
     <widget class="QTextBrowser" name="textBrowser_receivedMessages">
      <property name="geometry">
@@ -42,30 +42,40 @@
     <widget class="QLineEdit" name="lineEdit_message">
      <property name="geometry">
       <rect>
-       <x>10</x>
+       <x>80</x>
        <y>460</y>
-       <width>331</width>
-       <height>81</height>
+       <width>271</width>
+       <height>71</height>
       </rect>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton_sendMessage">
      <property name="geometry">
       <rect>
-       <x>340</x>
-       <y>500</y>
-       <width>81</width>
-       <height>41</height>
+       <x>350</x>
+       <y>470</y>
+       <width>71</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="text">
       <string>send</string>
      </property>
     </widget>
+    <widget class="QComboBox" name="comboBox_receiver">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>501</y>
+       <width>81</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
     <widget class="QPushButton" name="pushButton_sendAttachment">
      <property name="geometry">
       <rect>
-       <x>340</x>
+       <x>0</x>
        <y>460</y>
        <width>81</width>
        <height>41</height>
@@ -82,7 +92,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>794</width>
+     <width>800</width>
      <height>26</height>
     </rect>
    </property>
