--- a/telegram client 2/page4_home.ui
+++ b/telegram client 2/page4_home.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>426</width>
-    <height>595</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,20 +20,26 @@
    <widget class="QGroupBox" name="groupBox_chatbox">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>10</y>
-      <width>421</width>
+      <x>-10</x>
+      <y>0</y>
+      <width>800</width>
       <height>541</height>
      </rect>
     </property>
+    <property name="maximumSize">
+     <size>
+      <width>800</width>
+      <height>600</height>
+     </size>
+    </property>
     <property name="title">
-     <string>server</string>
+     <string/>
     </property>
     <widget class="QTextBrowser" name="textBrowser_receivedMessages">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>20</y>
+       <x>380</x>
+       <y>10</y>
        <width>411</width>
        <height>441</height>
       </rect>
@@ -42,9 +48,9 @@
     <widget class="QLineEdit" name="lineEdit_message">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>460</y>
-       <width>271</width>
+       <x>380</x>
+       <y>450</y>
+       <width>341</width>
        <height>71</height>
       </rect>
      </property>
@@ -52,33 +58,23 @@
     <widget class="QPushButton" name="pushButton_sendMessage">
      <property name="geometry">
       <rect>
-       <x>350</x>
-       <y>470</y>
+       <x>720</x>
+       <y>460</y>
        <width>71</width>
-       <height>51</height>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
       <string>send</string>
      </property>
     </widget>
-    <widget class="QComboBox" name="comboBox_receiver">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>501</y>
-       <width>81</width>
-       <height>31</height>
-      </rect>
-     </property>
-    </widget>
     <widget class="QPushButton" name="pushButton_sendAttachment">
      <property name="geometry">
       <rect>
-       <x>0</x>
-       <y>460</y>
-       <width>81</width>
-       <height>41</height>
+       <x>720</x>
+       <y>490</y>
+       <width>71</width>
+       <height>31</height>
       </rect>
      </property>
      <property name="text">
@@ -92,8 +88,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>426</width>
-     <height>22</height>
+     <width>800</width>
+     <height>25</height>
     </rect>
    </property>
   </widget>
